# rtree

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs
src/core/: mod.rs  render.rs  walk.rs
src/fs/: mock.rs  mod.rs  real.rs
src/models/: entry.rs  mod.rs  tree.rs
tests/: cli_e2e.rs
