[package]
name = "rtree"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.12.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
